# fichin

./: CMakeLists.txt  LICENSE  README.md  libfichin.zpr
include/fichin/: Actor.hpp  Game.hpp  Scene.hpp  SpriteActor.hpp  fActor.hpp  fAnimation.hpp  fCamera.hpp  fGame.hpp  fGroup.hpp  fPhysicsWorld.hpp  fResourceManager.hpp  fScene.hpp  fSprite.hpp  fSpritesheet.hpp  fText.hpp  fTilemap.hpp  fTypedGroup.hpp
include/fichin/components/: KinematicsController.hpp  SpriteRenderer.hpp  fAnimationController.hpp  fBoxCollider2D.hpp  fKinematicController.hpp  fSpriteRenderer.hpp
include/fichin/input/: Keyboard.hpp  Mouse.hpp  MouseHandler.hpp  fKeyboard.hpp  fMouse.hpp
include/fichin/utils/: FichinUtils.hpp  Singleton.hpp  fSingleton.hpp  fUtils.hpp
src/fichin/: Game.cpp  Keyboard.cpp  KinematicsController.cpp  Mouse.cpp  MouseHandler.cpp  Singleton.cpp  SpriteActor.cpp  SpriteRenderer.cpp  fAnimation.cpp  fAnimationController.cpp  fBoxCollider2D.cpp  fCamera.cpp  fGame.cpp  fGroup.cpp  fKeyboard.cpp  fKinematicController.cpp  fMouse.cpp  fPhysicsWorld.cpp  fScene.cpp  fSprite.cpp  fSpriteRenderer.cpp  fSpritesheet.cpp  fText.cpp  fTilemap.cpp
zinjai/addon/: build.bat
zinjai/addon/temp/: desc.ini
zinjai/addon/templates/fichin/: MyScene.cpp  MyScene.hpp  PlayScene.cpp  PlayScene.hpp  fichin.zpr
